Fixes issue with spacing messages - Fixes issue where avatar wouldnt show for links

--- a/src/renderer/components/ViewContainer/MessagingView/RightCol/Messaging/ConversationDisplay/MessageBubble/MessageBubble.css
+++ b/src/renderer/components/ViewContainer/MessagingView/RightCol/Messaging/ConversationDisplay/MessageBubble/MessageBubble.css
@@ -16,7 +16,6 @@
     margin: 0 auto 0 0;
     animation: fade 0.25s ease-in-out;
     transition: background-color ease-in-out 0.25s;
-    margin-top: -46px;
     margin-right: auto !important;
 }
 
@@ -58,7 +57,6 @@
     margin: 0 13px 0 auto !important;
     animation: fade 0.25s ease-in-out;
     transition: ease-in-out 0.25s;
-    margin-top: -46px !important;
 }
 
 .OutgoingMessage .message {
@@ -427,7 +425,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin: 0 0 0 40px;
+    margin: 0 0 0 0px;
 }
 
 .IncomingLink > div > .Attachment {
@@ -712,10 +710,6 @@
     align-items: center;
     padding: 5px 0 5px 0;
     overflow-x: scroll;
-}
-
-.emptyDiv {
-    height: 46px;
 }
 
 @keyframes fadeIn {
