--- a/src/renderer/components/ViewContainer/MessagingView/RightCol/Messaging/ConversationDisplay/RightConversationDisplay.css
+++ b/src/renderer/components/ViewContainer/MessagingView/RightCol/Messaging/ConversationDisplay/RightConversationDisplay.css
@@ -94,3 +94,7 @@
     cursor: pointer;
     padding-bottom: 5px;
 }
+
+#stb-button:focus {
+    outline: 0;
+}
